[package]
name = "quest_handtracking_fix_layer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
quark = { git = "https://github.com/Technobaboo/quark.git", rev = "57b6225bf9edfac6653055ddb1d2d45c4024d223" }
openxr = { git = "https://github.com/technobaboo/openxrs.git", branch = "quark-hax", default-features = false, features = ["mint"] }
glam = { version = "0.29.2", features = ["mint"] }
mint = "0.5.9"
